# ufrrj

./: q1.rad  q3.rad  q4.rad
aed1/: RESUMO AED1.odt
aed1/alocacaoEncadeada/: filaEncadeada.c  listaCircularDupla.c  listaEncadeada.c  pilhaEncadeada.c
aed1/alocacaoSequencial/: filaSequencial.c  listaSequencial.c  pilhaSequencial.c
aed1/ordenação/: insertionSort.c  selectionSort.c
aed2/: aed2.odt  caminhoCavalo.c  lista1.odt
assembly/: q2.rad
bd2/: bd2p2.odt  bd2p20.odt  bd2p22.odt
bd3/: .~lock.resumoBD3_p3.odt#  resumoBD3_1.odt  resumoBD3_p1.odt  resumoBD3_p3.odt
cg/histograma/: CMakeCache.txt  CMakeLists.txt  Histograma  Histograma.cpp  Makefile  cmake_install.cmake
cg/teste1/: DisplayImage  DisplayImage.cpp
cg/teste2/: CMakeCache.txt  CMakeLists.txt  FiltroGaussiano  FiltroGaussiano.cpp  Makefile  cmake_install.cmake
cg/teste3/: CMakeLists.txt  Mouse  mouse.cpp
cg/transformações/: CMakeCache.txt  CMakeLists.txt  Makefile  Transformacoes  Transformacoes.cpp  Transformacoes2.cpp  cmake_install.cmake
educacaoADistancia/: resumo_artigo1.docx  resumo_artigo2.docx  resumo_artigo3.docx  resumo_artigo4.docx
ia/: Resumo Algoritmos Genéticos.odt  Resumo algoritmos genéticos.odt
lp2/: album.h  arquivo.h  constantes.h  main.c  trab.c
qualidadeSoftware/: Resumo ISO 9000.odt
redes/: .~lock.RESUMO_REDES_P1.odt#  RESUMO_REDES_P1.odt  RESUMO_REDES_P2.odt
so/: p1.odt  p2.odt
